--- a/src/menu.css
+++ b/src/menu.css
@@ -5,14 +5,18 @@
   font-size:2.3rem;
   font-weight:lighter;
   justify-content: center;
-  margin-top: 5vh;
+  
 }
 
-.menu-info {
+.menu-column {
   display: flex;
   flex-direction: column;
   font-size: 1.5rem;
   text-align: center;
   gap: 1vh;
-  margin-bottom: 10vh;
+  margin-bottom: 4vh;
+}
+
+.menu-title {
+  margin: 2vh 0 2vh 0;
 }
